--- a/src/App.css
+++ b/src/App.css
@@ -145,7 +145,7 @@ button:hover {
 }
 
 .othersPost {
-  background-color: #4b91f1;
+  background-color: #3f76c3;
   color: white;
   border-left: 4px solid #ffffff88;
 }
